@@ -1,3 +1,12 @@
+2002-02-14  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-control-frame.c
+	(bonobo_control_frame_get_popup_component): implement.
+
+	* bonobo/bonobo-ui-engine-config.c
+	(bonobo_ui_engine_config_serialize),
+	(bonobo_ui_engine_config_hydrate): port to gconf.
+
 2002-02-13  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-engine-config.c
